--- a/Yesterday's Mayonnaise.vcxproj
+++ b/Yesterday's Mayonnaise.vcxproj
@@ -105,15 +105,15 @@ xcopy fmod\lib\fmodstudio64.dll "$(OutDir)" /Y</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\Archetypes.cpp" />
+    <ClCompile Include="Source\CameraFollow.cpp" />
     <ClCompile Include="Source\ColorChange.cpp" />
-    <ClCompile Include="Source\Level2.cpp" />
     <ClCompile Include="Source\Level1.cpp" />
-    <ClCompile Include="Source\Level3.cpp" />
     <ClCompile Include="Source\Main.cpp" />
     <ClCompile Include="Source\MonkeyAnimation.cpp" />
-    <ClCompile Include="Source\MonkeyMovement.cpp" />
+    <ClCompile Include="Source\PlayerMovement.cpp" />
     <ClCompile Include="Source\PlayerShip.cpp" />
     <ClCompile Include="Source\ScreenWrap.cpp" />
+    <ClCompile Include="Source\SpriteText.cpp" />
     <ClCompile Include="Source\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -122,14 +122,14 @@ xcopy fmod\lib\fmodstudio64.dll "$(OutDir)" /Y</Command>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Archetypes.h" />
+    <ClInclude Include="Source\CameraFollow.h" />
     <ClInclude Include="Source\ColorChange.h" />
-    <ClInclude Include="Source\Level2.h" />
     <ClInclude Include="Source\Level1.h" />
-    <ClInclude Include="Source\Level3.h" />
     <ClInclude Include="Source\MonkeyAnimation.h" />
-    <ClInclude Include="Source\MonkeyMovement.h" />
+    <ClInclude Include="Source\PlayerMovement.h" />
     <ClInclude Include="Source\PlayerShip.h" />
     <ClInclude Include="Source\ScreenWrap.h" />
+    <ClInclude Include="Source\SpriteText.h" />
     <ClInclude Include="Source\stdafx.h" />
     <ClInclude Include="Source\TimedDeath.h" />
   </ItemGroup>
