Correct files in filters and stuff

--- a/Yesterday's Mayonnaise.vcxproj.filters
+++ b/Yesterday's Mayonnaise.vcxproj.filters
@@ -49,6 +49,12 @@
     <ClCompile Include="Source\CameraFollow.cpp">
       <Filter>Game\Behaviors</Filter>
     </ClCompile>
+    <ClCompile Include="Source\ChipCollectible.cpp">
+      <Filter>Game\Behaviors</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\WinLevel.cpp">
+      <Filter>Game\Levels</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\stdafx.h">
@@ -83,6 +89,12 @@
     </ClInclude>
     <ClInclude Include="Source\CameraFollow.h">
       <Filter>Game\Behaviors</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ChipCollectible.h">
+      <Filter>Game\Behaviors</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\WinLevel.h">
+      <Filter>Game\Levels</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
