--- a/Yesterday's Mayonnaise.vcxproj
+++ b/Yesterday's Mayonnaise.vcxproj
@@ -106,6 +106,7 @@ xcopy fmod\lib\fmodstudio64.dll "$(OutDir)" /Y</Command>
   <ItemGroup>
     <ClCompile Include="Source\Archetypes.cpp" />
     <ClCompile Include="Source\CameraFollow.cpp" />
+    <ClCompile Include="Source\ChipCollectible.cpp" />
     <ClCompile Include="Source\ColorChange.cpp" />
     <ClCompile Include="Source\Level1.cpp" />
     <ClCompile Include="Source\Main.cpp" />
@@ -119,10 +120,12 @@ xcopy fmod\lib\fmodstudio64.dll "$(OutDir)" /Y</Command>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Source\TimedDeath.cpp" />
+    <ClCompile Include="Source\WinLevel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Archetypes.h" />
     <ClInclude Include="Source\CameraFollow.h" />
+    <ClInclude Include="Source\ChipCollectible.h" />
     <ClInclude Include="Source\ColorChange.h" />
     <ClInclude Include="Source\Level1.h" />
     <ClInclude Include="Source\MonkeyAnimation.h" />
@@ -132,6 +135,7 @@ xcopy fmod\lib\fmodstudio64.dll "$(OutDir)" /Y</Command>
     <ClInclude Include="Source\SpriteText.h" />
     <ClInclude Include="Source\stdafx.h" />
     <ClInclude Include="Source\TimedDeath.h" />
+    <ClInclude Include="Source\WinLevel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
