--- a/Yesterday's Mayonnaise.vcxproj
+++ b/Yesterday's Mayonnaise.vcxproj
@@ -108,6 +108,7 @@ xcopy fmod\lib\fmodstudio64.dll "$(OutDir)" /Y</Command>
     <ClCompile Include="Source\CameraFollow.cpp" />
     <ClCompile Include="Source\ChipCollectible.cpp" />
     <ClCompile Include="Source\ColorChange.cpp" />
+    <ClCompile Include="Source\DimensionController.cpp" />
     <ClCompile Include="Source\Level1.cpp" />
     <ClCompile Include="Source\Main.cpp" />
     <ClCompile Include="Source\MonkeyAnimation.cpp" />
@@ -127,6 +128,7 @@ xcopy fmod\lib\fmodstudio64.dll "$(OutDir)" /Y</Command>
     <ClInclude Include="Source\CameraFollow.h" />
     <ClInclude Include="Source\ChipCollectible.h" />
     <ClInclude Include="Source\ColorChange.h" />
+    <ClInclude Include="Source\DimensionController.h" />
     <ClInclude Include="Source\Level1.h" />
     <ClInclude Include="Source\MonkeyAnimation.h" />
     <ClInclude Include="Source\PlayerMovement.h" />
