--- a/Yesterday's Mayonnaise.vcxproj.filters
+++ b/Yesterday's Mayonnaise.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="Source\DimensionController.cpp">
       <Filter>Game\Behaviors</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Hazard.cpp">
+      <Filter>Game\Behaviors</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\stdafx.h">
@@ -100,6 +103,9 @@
       <Filter>Game\Levels</Filter>
     </ClInclude>
     <ClInclude Include="Source\DimensionController.h">
+      <Filter>Game\Behaviors</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Hazard.h">
       <Filter>Game\Behaviors</Filter>
     </ClInclude>
   </ItemGroup>
