--- a/Yesterday's Mayonnaise.vcxproj
+++ b/Yesterday's Mayonnaise.vcxproj
@@ -43,14 +43,14 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <TargetName>BetaFramework</TargetName>
+    <TargetName>Yesterday's Mayonnaise</TargetName>
     <IncludePath>HighLevelAPI\include;fmod\inc;LowLevelAPI\include;glfw\include;$(IncludePath)</IncludePath>
     <LibraryPath>HighLevelAPI\lib;fmod\lib;LowLevelAPI\lib;glfw\lib\x64;$(LibraryPath)</LibraryPath>
     <OutDir>$(ProjectDir)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <TargetName>BetaFramework</TargetName>
+    <TargetName>Yesterday's Mayonnaise</TargetName>
     <IncludePath>HighLevelAPI\include;fmod\inc;LowLevelAPI\include;glfw\include;$(IncludePath)</IncludePath>
     <LibraryPath>HighLevelAPI\lib;fmod\lib;LowLevelAPI\lib;glfw\lib\x64;$(LibraryPath)</LibraryPath>
     <OutDir>$(ProjectDir)\$(Platform)\$(Configuration)\</OutDir>
