Fixed levels Added power ups More menus AAAAAA

--- a/Yesterday's Mayonnaise.vcxproj.filters
+++ b/Yesterday's Mayonnaise.vcxproj.filters
@@ -67,6 +67,12 @@
     <ClCompile Include="Source\MainMenu.cpp">
       <Filter>Game\Levels</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Controls.cpp">
+      <Filter>Game\Levels</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Credit.cpp">
+      <Filter>Game\Levels</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\stdafx.h">
@@ -118,6 +124,12 @@
       <Filter>Game\Behaviors</Filter>
     </ClInclude>
     <ClInclude Include="Source\MainMenu.h">
+      <Filter>Game\Levels</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Controls.h">
+      <Filter>Game\Levels</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Credit.h">
       <Filter>Game\Levels</Filter>
     </ClInclude>
   </ItemGroup>
