--- a/Yesterday's Mayonnaise.vcxproj
+++ b/Yesterday's Mayonnaise.vcxproj
@@ -109,6 +109,8 @@ xcopy fmod\lib\fmodstudio64.dll "$(OutDir)" /Y</Command>
     <ClCompile Include="Source\CameraFollow.cpp" />
     <ClCompile Include="Source\ChipCollectible.cpp" />
     <ClCompile Include="Source\ColorChange.cpp" />
+    <ClCompile Include="Source\Controls.cpp" />
+    <ClCompile Include="Source\Credit.cpp" />
     <ClCompile Include="Source\DimensionController.cpp" />
     <ClCompile Include="Source\Hazard.cpp" />
     <ClCompile Include="Source\Level1.cpp" />
@@ -132,6 +134,8 @@ xcopy fmod\lib\fmodstudio64.dll "$(OutDir)" /Y</Command>
     <ClInclude Include="Source\CameraFollow.h" />
     <ClInclude Include="Source\ChipCollectible.h" />
     <ClInclude Include="Source\ColorChange.h" />
+    <ClInclude Include="Source\Controls.h" />
+    <ClInclude Include="Source\Credit.h" />
     <ClInclude Include="Source\DimensionController.h" />
     <ClInclude Include="Source\Hazard.h" />
     <ClInclude Include="Source\Level1.h" />
